<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Linear layout for simple UI -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/margin_16dp"
        android:weightSum="2"
        tools:context=".login.presentation.LoginFragment">

        <TextView
            android:id="@+id/email_tv"
            style="@style/LargeBoldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/email_edit_text_hint"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/edit_text_min_height"
            android:textColorHint="@color/editable_textview_hint_text_color" />

        <TextView
            android:id="@+id/password_tv"
            style="@style/LargeBoldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_64dp"
            android:text="@string/password_text" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/password_et_hint"
            android:inputType="textPassword"
            android:minHeight="@dimen/edit_text_min_height"
            android:textColorHint="@color/editable_textview_hint_text_color" />

        <Button
            android:id="@+id/login_btn"
            style="@style/ShoeStoreButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_64dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:text="@string/login_btn_text" />

        <Button
            android:id="@+id/signup_button"
            style="@style/ShoeStoreButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_btn_text" />

    </LinearLayout>
</layout>