<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Linear Layout is better for simple layouts -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".welcome.presentation.WelcomeFragment">

        <TextView
            android:id="@+id/welcome_heading_tv"
            style="@style/ExtraLargeBoldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_heading_text" />

        <TextView
            android:id="@+id/welcome_subheading_tv"
            style="@style/LargeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:gravity="center"
            android:text="@string/welcome_subheading_text" />

        <Button
            android:id="@+id/navigate_to_instructions_btn"
            style="@style/ShoeStoreButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/show_instructions_text" />

    </LinearLayout>
</layout>