<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- weightSum is used here so that the content appears proportional to the screen size -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_16dp"
        android:weightSum="3"
        tools:context=".instructions.presentation.InstructionsFragment">

        <TextView
            android:id="@+id/instructions_heading_tv"
            style="@style/ExtraLargeBoldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_heading_text" />

        <TextView
            android:id="@+id/instructions_details_tv"
            style="@style/LargeTextStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_weight="1"
            android:text="@string/instructions_text" />

        <Button
            android:id="@+id/continue_btn"
            style="@style/ShoeStoreButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/continue_text" />

    </LinearLayout>
</layout>