<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.shoesListing.presentation.ShoeListingViewModel" />
    </data>

    <!-- constraint layout is used here as it would require nested ViewGroups otherwise ( with Linear Layout ) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_16dp"
        tools:context=".shoesDetails.presentation.ShoesDetailsFragment">

        <TextView
            android:id="@+id/shoes_name_tv"
            style="@style/MediumBoldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoes_name"
            app:layout_constraintBottom_toTopOf="@+id/shoes_size_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/shoes_size_tv"
            style="@style/MediumBoldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoes_size"
            app:layout_constraintBottom_toTopOf="@+id/shoes_company_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoes_name_tv" />

        <TextView
            android:id="@+id/shoes_company_tv"
            style="@style/MediumBoldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoes_company"
            app:layout_constraintBottom_toTopOf="@+id/shoes_description_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoes_size_tv" />

        <TextView
            android:id="@+id/shoes_description_tv"
            style="@style/MediumBoldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoes_description"
            app:layout_constraintBottom_toTopOf="@+id/save_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoes_company_tv" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/labels_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="shoes_name_tv, shoes_size_tv, shoes_company_tv, shoes_description_tv" />

        <EditText
            android:id="@+id/shoes_name_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:autofillHints="@null"
            android:ems="10"
            android:hint="@string/shoes_name_et_hint"
            android:inputType="text"
            android:minHeight="@dimen/edit_text_min_height"
            android:text="@={viewModel.newShoeName}"
            android:textColorHint="@color/editable_textview_hint_text_color"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoes_name_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labels_barrier" />

        <EditText
            android:id="@+id/shoes_size_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:autofillHints="@null"
            android:ems="10"
            android:hint="@string/shoes_size_et_hint"
            android:inputType="number"
            android:minHeight="@dimen/edit_text_min_height"
            android:text="@={viewModel.newShoeSize}"
            android:textColorHint="@color/editable_textview_hint_text_color"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoes_size_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labels_barrier" />

        <EditText
            android:id="@+id/shoes_company_name_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:autofillHints="@null"
            android:ems="10"
            android:hint="@string/company_name_et_hint"
            android:inputType="text"
            android:minHeight="@dimen/edit_text_min_height"
            android:text="@={viewModel.newShoesCompany}"
            android:textColorHint="@color/editable_textview_hint_text_color"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoes_company_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labels_barrier" />

        <EditText
            android:id="@+id/shoes_description_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:autofillHints="@null"
            android:ems="10"
            android:hint="@string/shoes_description_et_hint"
            android:inputType="text"
            android:minHeight="@dimen/edit_text_min_height"
            android:text="@={viewModel.newShoeDescription}"
            android:textColorHint="@color/editable_textview_hint_text_color"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoes_description_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labels_barrier" />

        <Button
            android:id="@+id/save_btn"
            style="@style/ShoeStoreButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{viewModel.isSaveButtonEnabled}"
            android:text="@string/save_button_text"
            app:layout_constraintBottom_toTopOf="@+id/buttons_bottom_guideline"
            app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoes_description_et"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/cancel_btn"
            style="@style/ShoeStoreButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_btn_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/save_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/save_btn" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/buttons_bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>